force-app/main/default/objects/Letting__c/fields/Total_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit__c</fullName>
    <label>Total Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>