force-app/main/default/objects/Letting__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Short Let</fullName>
            </value>
            <value>
                <fullName>Non Housing Act - Law of Contract</fullName>
            </value>
            <value>
                <fullName>Assured Shorthold</fullName>
            </value>
            <value>
                <fullName>Company Let</fullName>
            </value>
            <value>
                <fullName>Premium Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>