force-app/main/default/objects/Letting__c/fields/Unallocated__c.field-meta.xml
<CustomField>
    <fullName>Unallocated__c</fullName>
    <label>Unallocated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>