force-app/main/default/objects/Letting__c/fields/Water__c.field-meta.xml
<CustomField>
    <fullName>Water__c</fullName>
    <label>Water Meter Reading</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>