force-app/main/default/objects/Letting__c/fields/Water_On__c.field-meta.xml
<CustomField>
    <fullName>Water_On__c</fullName>
    <label>Water Meter Reading On</label>
    <type>Date</type>
</CustomField>