force-app/main/default/objects/Letting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Listing__c</columns>
    <columns>Letting_Fee__c</columns>
    <columns>Listing_Address__c</columns>
    <columns>Landlord__c</columns>
    <columns>Main_Tenant__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>