force-app/main/default/objects/Letting__c/listViews/My_Lettings.listView-meta.xml
<ListView>
    <fullName>My_Lettings</fullName>
    <columns>NAME</columns>
    <columns>Listing__c</columns>
    <columns>Letting_Fee__c</columns>
    <columns>Listing_Address__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Lettings</label>
</ListView>